<resources>
    <string name="app_name">V2EX</string>
    <string name="app_github_repo_url">https://github.com/imhanjie/android-v2ex-app</string>
    <string name="app_about_version">版本号：%1$s  ( Build %2$d )</string>
    <string name="tab_main">首页</string>
    <string name="tab_node">节点</string>
    <string name="tab_notification">消息</string>
    <string name="tab_me">我的</string>
    <string name="hint_login_user_name">用户名或电子邮箱</string>
    <string name="hint_login_password">密码</string>
    <string name="hint_login_ver_code">图形验证码</string>
    <string name="login">登录</string>
    <string name="tips_login_success">登录成功</string>
    <string name="all_reply">全部回复</string>
    <string name="reply_order">按时间顺序</string>
    <string name="reply_reverse_order">按时间逆序</string>
    <string name="reply_floor">#%1$d</string>
    <string name="topic_item_desc">%1$s&#160;&#160;•&#160;&#160;%2$d 条回复</string>
    <string name="topic_item_desc_with_top">置顶&#160;&#160;•&#160;&#160;%1$s&#160;&#160;•&#160;&#160;%2$d&#160;条回复</string>
    <string name="topic_details_desc">%1$s&#160;&#160;•&#160;&#160;%2$d 次点击</string>
    <string name="topic_subtle_title">第 %1$d 条附言&#160;&#160;•&#160;&#160;%2$s</string>
    <string name="tips_favorite_success">收藏成功</string>
    <string name="tips_un_favorite_success">已取消收藏</string>
    <string name="tips_favorite_fail">操作失败，请稍后再试</string>
    <string name="tips_thank_reply_success">感谢成功</string>
    <string name="menu_thank">感谢</string>
    <string name="menu_reply">回复</string>
    <string name="menu_ignore_topic">忽略主题</string>
    <string name="tips_ignore_topic_success">已忽略主题</string>
    <string name="menu_favorite_topic">收藏主题</string>
    <string name="menu_un_favorite_topic">取消收藏主题</string>
    <string name="title_favorite_topics">我收藏的主题</string>
    <string name="menu_append_topic">添加附言</string>
    <string name="menu_block_member">屏蔽用户</string>
    <string name="tips_block_member_success">已屏蔽用户</string>
    <string name="menu_un_block_member">取消屏蔽用户</string>
    <string name="tips_un_block_member_success">已取消屏蔽用户</string>
    <string name="menu_follow_member">关注用户</string>
    <string name="tips_follow_member_success">已关注用户</string>
    <string name="menu_un_follow_member">取消关注用户</string>
    <string name="tips_un_follow_member_success">已取消关注用户</string>
    <string name="title_member_topics">TA 的主题</string>
    <string name="title_member_replies">TA 的回复</string>
    <string name="title_settings">设置</string>
    <string name="title_about">关于</string>
    <string name="view_source_code">查看开放源代码</string>
    <string name="cancel">取消</string>
    <string name="coming_soon">暂未开放</string>
    <string name="hint_search_node">输入节点名搜索</string>
    <string name="topic_title">标题</string>
    <string name="topic_content">正文</string>
    <string name="hint_create_topic_title">标题</string>
    <string name="hint_create_topic_content">正文\n\n👉 支持 Markdown 语法。\n👉 如果标题能够表达完整内容，则正文可以为空。</string>
    <string name="hint_append_topic_content">附言\n\n👉 支持 Markdown 语法。</string>
    <string name="plz_choose_node">请选择节点</string>
    <string name="preview_topic">预览</string>
    <string name="tips_empty_topic_title">请输入标题内容</string>
    <string name="tips_empty_append_content">请输入附言内容</string>
    <string name="tips_empty_page_once">页面初始化失败，请重试</string>
    <string name="tips_success_create_topic">主题创建成功</string>
</resources>
