<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--V2EX-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/widget_bg_dialog"
        android:paddingStart="32dp"
        android:paddingTop="16dp"
        android:paddingEnd="32dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/app_name"
            android:textColor="@color/widget_text_1"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_app_logo"
            app:layout_constraintTop_toTopOf="@id/iv_app_logo" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/widget_text_3"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_app_logo"
            app:layout_constraintStart_toEndOf="@id/iv_app_logo"
            tools:text="版本号：1.0.0  ( Build 103 )" />

        <TextView
            android:id="@+id/view_source_code"
            style="@style/AboutTextItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/view_source_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_app_logo" />

        <TextView
            android:id="@+id/cancel"
            style="@style/AboutTextItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_source_code" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

